# MultiPrecision

./: CMakeLists.txt  README.md  integerTest.cpp
cmake/: MultiPrecisionConfig.cmake.in
include/MultiPrecision/: DivisionByZero.h  Error.h  InvalidCharacter.h  Underflow.h  Unsigned.h  UnsignedUnderflow.h  math.h
src/MultiPrecision/: DigitPairType.h  DivisionByZero.cpp  Error.cpp  InvalidCharacter.cpp  Underflow.cpp  Unsigned.cpp  UnsignedUnderflow.cpp  Unsigned_DivisionByDigitType.cpp  Unsigned_DivisionByUnsigned.cpp  pow_Unsigned_Unsigned.cpp  pow_Unsigned_Unsigned_Unsigned.cpp
src/MultiPrecision/Unsigned/: AdditionOfDigitType.cpp  AdditionOfUnsigned.cpp  BitRange.cpp  ConstBitIterator.cpp  DivisionByDigitType.cpp  DivisionByUnsigned.cpp  EqualComparison.cpp  FullBitRange.cpp  LeftShift.cpp  LessThanComparison.cpp  LessThanOrEqualComparison.cpp  MinimalBitRange.cpp  MultiplicationWithDigitType.cpp  MultiplicationWithUnsigned.cpp  RightShift.cpp  ShiftToLeft.cpp  ShiftToRight.cpp  StringReadBuffer.cpp  SubtractionOfDigitType.cpp  SubtractionOfUnsigned.cpp
test/: CMakeLists.txt  mathTest.cpp  unsignedTest.cpp
